[package]
name = "config_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13", default-features = false, features = [
    "yaml",
    "json",
] }
serde = "1.0.115"
serde-aux = "4"
serde_json = "1.0.61"
serde_with = "3.3.0"
secrecy = { version = "0.8", features = ["serde"] }
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.40"
