[package]
name = "config_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.13", default-features = false, features = [
    "yaml",
    "json",
    "toml",
] }
serde = "1.0.115"
serde-aux = "4"
serde_json = "1.0.61"
serde_with = "3.3.0"
secrecy = { version = "0.8", features = ["serde"] }
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.40"
const-str = "0.5.6"
